Fix cookie notice background color in dark mode (#6672)
Instead of always assuming it should have a white background, use a css
property to respond to the current theme.

--- a/src/_sass/components/_cookie-notice.scss
+++ b/src/_sass/components/_cookie-notice.scss
@@ -1,7 +1,7 @@
 #cookie-notice {
   display: none;
   justify-content: center;
-  background-color: #fff;
+  background-color: var(--site-raised-bgColor);
   padding: 1.25rem;
   position: fixed;
   bottom: 0;
